<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/colorOnPrimary"
    tools:context=".views.detail.DetailActivity">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/detail_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/dark_grey"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/user_s_detail"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:fontFamily="@font/open_sans_extrabold"/>

    </androidx.appcompat.widget.Toolbar>

    <ImageView
        android:id="@+id/detail_bg"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:src="@drawable/bg_detail"
        tools:ignore="ContentDescription"
        app:layout_constraintTop_toBottomOf="@id/detail_toolbar"
        app:layout_constraintStart_toStartOf="parent"/>


    <ImageView
        android:id="@+id/detail_img"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.04"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/detail_bg" />


    <TextView
        android:id="@+id/detail_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/name"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:fontFamily="@font/open_sans_bold"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toEndOf="@id/detail_img"
        app:layout_constraintTop_toTopOf="@id/detail_img"/>

    <TextView
        android:id="@+id/detail_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/user_name"
        android:textSize="18sp"
        android:textColor="@color/light_grey"
        android:fontFamily="@font/open_sans_bold"
        app:layout_constraintStart_toStartOf="@id/detail_name"
        app:layout_constraintTop_toBottomOf="@id/detail_name"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@id/detail_username"
        app:layout_constraintStart_toEndOf="@id/detail_img">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/following"
            android:fontFamily="@font/open_sans_regular"/>

        <TextView
            android:id="@+id/detail_following_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/num"
            android:fontFamily="@font/open_sans_bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/followers"
            android:fontFamily="@font/open_sans_regular"/>

        <TextView
            android:id="@+id/detail_followers_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/num"
            android:fontFamily="@font/open_sans_bold"/>


    </LinearLayout>


    <ImageView
        android:id="@+id/detail_location"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:src="@drawable/ic_location"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/detail_img"/>

    <TextView
        android:id="@+id/detail_location_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location"
        android:fontFamily="@font/open_sans_regular"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toTopOf="@id/detail_location"
        app:layout_constraintBottom_toBottomOf="@id/detail_location"
        app:layout_constraintStart_toEndOf="@id/detail_location"/>

    <ImageView
        android:id="@+id/detail_company"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:src="@drawable/ic_work"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="@id/detail_location"
        app:layout_constraintEnd_toEndOf="@id/detail_location"
        app:layout_constraintTop_toBottomOf="@id/detail_location"/>

    <TextView
        android:id="@+id/detail_company_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/company"
        android:fontFamily="@font/open_sans_regular"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toTopOf="@id/detail_company"
        app:layout_constraintBottom_toBottomOf="@id/detail_company"
        app:layout_constraintStart_toEndOf="@id/detail_company"/>

    <ImageView
        android:id="@+id/detail_repo"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:src="@drawable/ic_repository"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="@id/detail_company"
        app:layout_constraintEnd_toEndOf="@id/detail_company"
        app:layout_constraintTop_toBottomOf="@id/detail_company"/>

    <TextView
        android:id="@+id/detail_repo_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/repository"
        android:fontFamily="@font/open_sans_regular"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toTopOf="@id/detail_repo"
        app:layout_constraintBottom_toBottomOf="@id/detail_repo"
        app:layout_constraintStart_toEndOf="@id/detail_repo"/>

    <ToggleButton
        android:id="@+id/fav_btn"
        android:layout_width="38dp"
        android:layout_height="38dp"
        android:background="@drawable/favorite_toggle"
        android:textOff=""
        android:textOn=""
        android:focusable="false"
        android:focusableInTouchMode="false"
        app:layout_constraintBottom_toBottomOf="@id/detail_repo_number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.91"
        app:layout_constraintStart_toStartOf="@id/detail_repo_number"
        app:layout_constraintTop_toTopOf="@id/detail_repo_number" />
    
    <com.google.android.material.tabs.TabLayout
        android:id="@+id/detail_tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/detail_repo"
        android:background="?attr/colorOnPrimary"/>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/detail_view_pager"
        android:layout_width="match_parent"
        android:layout_height="466dp"
        app:layout_constraintTop_toBottomOf="@id/detail_tabs"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.facebook.shimmer.ShimmerFrameLayout
        android:id="@+id/detail_shimmer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/detail_toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">
        <include layout="@layout/shimmer_layout"/>
    </com.facebook.shimmer.ShimmerFrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
